# IoT-Service

./: .gitignore  README.md
IoT-Service/: concurrent_requests.py
IoT-Service/IoT/: DELETE_valid_query.bru  GET_HelloWorld.bru  GET_valid_query.bru  POST_datatypes_exceed_boundaries_json.bru  POST_invalid_json.bru  POST_valid_json.bru  POST_valid_json1.bru  POST_valid_json2.bru  POST_valid_json3.bru  PUT_end.bru  PUT_now.bru  PUT_span.bru  PUT_start.bru
IoT-Service/IoT/POST/: TEST_C.bru
IoT-Service/env/: pyvenv.cfg
IoT-Service/server/: Cargo.toml
IoT-Service/server/src/: .env  db.config  error.rs  lib.rs  main.rs  temp.txt  util.rs
IoT-Service/server/src/connector/: middleware.rs  response.rs
IoT-Service/server/src/data_managment/: database.rs  dataformat.rs  message_passing.rs  mod.rs
architecture_planning/: IOT-Architecture.pptx
docker-compose/: docker-compose.yml
esp32/wifi_connection/: wifi_connection.ino
server/: Cargo.toml
server/src/: data.rs  http_handling.rs  main.rs  method_handling.rs  response.html
server/src/middleware/: mod.rs
