[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
build-override.opt-level = 3
opt-level = 3
codegen-units = 1
overflow-checks = false

[dependencies]
base64 = "0.22.1"
crossbeam = "0.8.4"
crossterm = "0.28.1"
hyper = { version = "0.14", features = ["full"] }
postgres = "0.19.8"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
